syntax = "proto3";

package vusb;
option go_package = "./proto";

service VirtualUSBService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
  string device_id = 2;
}

message HelloResponse {
  string message = 1;
  string server_id = 2;
}
